@@ -1,0 +1,5 @@
+
+<%= inicio_formulario( { :action => 'modificar', :id => @materia }, false ) %>
+  <%= texto "Nombre", 'materia', 'nombre' %>
+<%= final_formulario %>
+
