@@ -5,5 +5,6 @@
 ActiveSupport::Inflector.inflections do |inflect|
   inflect.irregular 'configuracion', 'configuracion'
   inflect.irregular 'caja', 'caja'
+  inflect.irregular 'materia', 'materia'
   inflect.irregular 'oscommerce', 'oscommerce'
 end
